objects/noduplicates__Matching_Rule__c.object
<CustomObject>
    <fields>
        <fullName>noduplicates__Batch_Completed_Date__c</fullName>
        <label>Batch Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>noduplicates__Batch_Extended_Status__c</fullName>
        <label>Batch Extended Status</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>noduplicates__Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Batch_Status__c</fullName>
        <label>Batch Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Cross_Filter_Condition__c</fullName>
        <label>Cross Filter Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Cross_Object_Label__c</fullName>
        <label>Cross Object Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Cross_Object__c</fullName>
        <label>Cross Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Display_Fields__c</fullName>
        <label>Display Fields</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>noduplicates__Filter_Condition__c</fullName>
        <label>Filter Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Object__c</fullName>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Records_Per_Object__c</fullName>
        <label>Records Per Object</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>noduplicates__Report_Fields__c</fullName>
        <label>Report Fields</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>noduplicates__Search_across_main_object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Search across main object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Subset_Filter_Condition__c</fullName>
        <label>Subset Filter Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Matching Rule</label>
    <listViews>
        <fullName>noduplicates__All</fullName>
        <columns>NAME</columns>
        <columns>noduplicates__Name__c</columns>
        <columns>noduplicates__Object__c</columns>
        <columns>noduplicates__Cross_Object__c</columns>
        <columns>noduplicates__Records_Per_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MR-{0000000}</displayFormat>
        <label>Matching Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>